SUBDIRS = custom

includedir = @includedir@/gtest/internal

include_HEADERS = gtest-param-util-generated.h \
gtest-type-util.h \
gtest-param-util.h \
gtest-port.h \
gtest-linked_ptr.h \
gtest-internal.h \
gtest-death-test-internal.h \
gtest-filepath.h \
gtest-string.h \
gtest-tuple.h \
gtest-port-arch.h

